* awapi-test.php: Included a dummy function for apply_filters() so 		that http.php in WordPress 2.7 works. 	* fs-comm.php: Added the necessary include files for WordPress' 		rss.php.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@75264 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-11-21  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* awapi-test.php: Included a dummy function for apply_filters() so 
+		that http.php in WordPress 2.7 works.
+	* fs-comm.php: Added the necessary include files for WordPress' 
+		rss.php.
+
 2008-11-20  Jonathan Wilde <speedbreeze@gmail.com>
 
 	* feed-stats.php: Edited the description line so that the link to 
