--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-11-27  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* awapi-test.php: Tweaked wording.  Made it load the wp-config.php 
+		file rather than getting ABSPATH and WPINC from GET variables. 
+		Far more secure.
+	* feed-stats.php: Removed ABSPATH and WPINC information that was 
+		being passed to awapi-test.php via GET variables.
+	* js/test.js: Added lots of comments.  Removed the unnecessary code 
+		to send ABSPATH and WPINC variables to awapi-test.php.
+
+2008-11-27  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* feed-stats.php: Massive code cleanup. Cleaned up the tab code by 
 		removing the unnecessary </a> tags and the fs-clr-tab <li> tag. 
 		Replaced inline style tags with class names. Removed class names 
