* awapi-test.php: Removed error checking code; that has been moved 		into the fs_check_errors() function. 	* feed-stats.php: Improved troubleshooting information. 	* fs-parse.php: Improved fs_check_errors(). 	* fs-render.php: Improved data checking and message for when there's 		no data. 	* style.css.php: Tweaked the .fs-message class.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@76194 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-11-27  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* awapi-test.php: Removed error checking code; that has been moved 
+		into the fs_check_errors() function.
+	* feed-stats.php: Improved troubleshooting information. 
+	* fs-parse.php: Improved fs_check_errors().
+	* fs-render.php: Improved data checking and message for when there's 
+		no data.
+	* style.css.php: Tweaked the .fs-message class.
+
+2008-11-27  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* awapi-test.php: Tweaked wording.  Made it load the wp-config.php 
 		file rather than getting ABSPATH and WPINC from GET variables. 
 		Far more secure.
