--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-11-27  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* feed-stats.php: Removed obsolete CSS styles for IE. Modified the 
+		tab markup.  Changed one of the styles for the clear block at 
+		the bottom of the Settings page.
+	* style.css.php: Rewrote the tabs CSS.
+
+2008-11-27  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* feed-stats.php: Added a the optiontable class name, which makes 
 		the "Feed Stats Options" page look pretty in WordPress 2.3.  
 		Added a conditional that only tries to use sanitize_url if the 
