* readme.txt: Added a section talking about the new Google Group.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@78126 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-07  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* readme.txt: Added a section talking about the new Google Group.
+
 2008-11-27  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* readme.txt: Updated for version 1.0.4.  Added Google Chrome to the 
