--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-14  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* feed-stats.php: Changed "template" to "templates" in the path to 
+		the templates directory so that load_template() can find the 
+		templates needed to display the plugin.
+
 2009-01-31  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* feed-stats.php: Moved the header (which contains links to CSS 
