--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+2009-02-15  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* awapi-test.php: Added URL decoding to deal with the new format of 
+		the feed names.  Modified it to work with the new 
+		fs_fetch_feedburner_data() function in fs-comm.php.
+	* feed-stats.php: *Removed* sanitize_url due to potential issues 
+		down the road.  This will probably need to be reimplemented 
+		somewhow else later. Removed the use of fs_check_errors() the new
+		fs_fetch_feedburner_data() takes care of this. Modified all of 
+		the templates to work with the new return format in 
+		fs_fetch_feedburner_data();
+	* fs-comm.php: Added fs_fetch_feedburner_data(), which performs 
+		pattern matching on the FeedBurner feed URL to determine whether 
+		it's a FeedBurner feed (feeds.feedburner.com) or a Google 
+		FeedBurner feed (feed2.feedburner.com, feedproxy.google.com).  
+		If the user has a feed name (not a full URL) typed in, it will 
+		append the feed name to http://feeds.feedburner.com/. If a 
+		request to a FeedBurner feed doesn't work, then it will try 
+		communicating to a Google FeedBurner feed.  That should ease the 
+		transition to Google feeds.  I also modified fs_load_feed_data() 
+		and fs_load_item_data() so that they use the 
+		fs_fetch_feedburner_data() function.
+	* templates/settings.php: Changed feed names to feed URLs in the 
+		descriptions. Tweaked text and button styling to fit in with WP 2.7.
+
 2009-02-14  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* feed-stats.php: Changed "template" to "templates" in the path to 
