* style.css.php: Added background images to the waiting, good 		result, and bad result indicators on the feed tester. 	* templates/header.php: Shortened a GET parameter name. 	* templates/settings.php: Removed the loader icon image.  Re-added as 		a CSS background image (see above).
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@94796 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-02-15  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* style.css.php: Added background images to the waiting, good 
+		result, and bad result indicators on the feed tester.
+	* templates/header.php: Shortened a GET parameter name.
+	* templates/settings.php: Removed the loader icon image.  Re-added as 
+		a CSS background image (see above).
+
+2009-02-15  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* feed-stats.php: Added a CSS class so that we can add a bit of 
 		padding around the stats tables.
 	* fs-render.php: Added the necessary CSS classes on the stats tables 
