--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-02-15  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* readme.txt: Updated to match the change of feed name -> feed URL 
+		in the setting box.
+	* templates/settings.php: Made 10 days of stats the default.
+
+2009-02-15  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* fs-render.php: Made the "widefat" WordPress CSS class only added 
 		to the stats table if WordPress is version 2.7 or above.
 
