--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-20  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* feed-stats.php: Made it so that we can see Reach stats while even 
+		though item stats are currently down on google.feedburner.com.
+
 2009-02-19  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* awapi-test.php: Added <?php if (!defined('WPINC')) die("No outside 
