--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,29 @@
+2009-03-06  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* COPYING: Added a full copy of the GPL v2 to the project in the form of a
+        FSF-standard COPYING file.
+	* awapi-test.php: Added in the proper GPL v2 license block.
+	* feed-stats.php: Moved the anti-remote-execution code into the header next 
+        to the PHP opening tag for cleanliness.  Updated the GPL license block 
+        at the top.
+	* fs-comm.php: Moved the anti-remote-execution code into the header next 
+        to the PHP opening tag for cleanliness. Updated the GPL license block.  
+        Significantly improved the documentation for the fetch_remote_xml($url) 
+        function.
+	* fs-parse.php: Moved the anti-remote-execution code into the header next 
+        to the PHP opening tag for cleanliness.  Updated the GPL license block 
+        at the top.
+	* fs-render.php: Moved the anti-remote-execution code into the header next 
+        to the PHP opening tag for cleanliness.  Updated the GPL license block 
+        at the top.
+	* style.css.php: Cleanup of spacing.  Added the GPL license block.
+	* templates/header.php: Added the GPL license block.
+	* templates/settings.php: Added the GPL license block.
+	* templates/troubleshooting.php: Added the GPL license block.
+	* tests/fs-comm-test.php: Contains scaffolding for a SimpleTest for the 
+        fs-comm.php script.
+	* tests (added): Added a folder to contain test cases and SimpleTest itself.
+
 2009-02-20  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* feed-stats.php: Made it so that we can see Reach stats while even 
