--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-03-06  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* fs-comm.php: Made the old and new Awareness API URLs constants so that we 
+        can use them in other parts of the plugin easily.
+
+2009-03-06  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* feed-stats.php: Implemented the changes (added the $name variable as the 
         first argument) made to the fs_dashboard_url and fs_stats_set_url 
         functions in fs-comm.php.
