--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-03-07  Jonathan Wilde  <speedbreeze@gmail.com>
 
+	* feed-stats.php: Tweaked the Google FeedBurner 500 error message to make it
+        a bit less awkward.
+
+2009-03-07  Jonathan Wilde  <speedbreeze@gmail.com>
+
 	* feed-stats.php: Added the feed-stats-left-chart-cell, 
         feed-stats-right-chart-cell, feed-stats-left-table-cell, and 
         feed-stats-right-table-cell CSS classes to the top left, top right, bottom
