--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-05-10  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* feed-stats.php: Applied a patch to fix the bug reported in the email:
+        http://groups.google.com/group/feed-stats-plugin/browse_thread/thread/4e6d04feefd02f48?hl=en
+
 2009-03-21  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* feed-stats.php: Tweaked version number of plugin (it's going out of beta 
