--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-06-15  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* feed-stats.php: Removed the scary Google FeedBurner error message.
+        Since Google fixed this, the message is no longer needed.
+
 2009-05-10  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* feed-stats.php: Applied a patch to fix the bug reported in the email:
