* feed-stats.php: Fixed the link to the AJAX feed tester.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@126547 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-16  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* feed-stats.php: Fixed the link to the AJAX feed tester.
+
 2009-06-15  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* awapi-test.php: Tweaked the code to work properly with the new
