--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-18  Jonathan Wilde  <speedbreeze@gmail.com>
+
+	* feed-stats.php: Fixed two parse errors.
+
 2009-06-16  Jonathan Wilde  <speedbreeze@gmail.com>
 
 	* feed-stats.php: Fixed the link to the AJAX feed tester.
